# spirv-tools-rs

./: .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  default.nix  deny.toml  release.toml
.cargo/: config.toml
.github/workflows/: release-plz.yml  rust-ci.yml
examples/assembler/: Cargo.toml
spirv-tools/: CHANGELOG.md  Cargo.toml  README.md
spirv-tools-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  generate.rs
spirv-tools-sys/src/: assembler.rs  diagnostics.rs  lib.rs  opt.rs  shared.rs  val.rs
spirv-tools/src/: binary.rs  cmd.rs  error.rs  val.rs
spirv-tools/src/assembler/: compiled.rs  tool.rs
spirv-tools/tests/: issue_22.rs  optimizer.rs  wgpu_example_shader.spv
src/: assembler.rs  binary.rs  cmd.rs
src/opt/: compiled.rs  tool.rs
tests/: val.rs
tools/generate/: Cargo.toml  main.rs  vulkan-sdk-update.md
tools/install/: main.rs
tools/package/: main.rs
