[workspace]
members = [
    "spirv-tools",
    "spirv-tools-sys",
    "examples/assembler",
    "tools/generate",
]
resolver = "2"

[workspace.package]
description = "Wrapper crate for SPIRV-Tools"
repository = "https://github.com/rust-gpu/spirv-tools-rs"
version = "0.13.0"
authors = ["rust-gpu developers", "Embark <opensource@embark-studios.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/spirv-tools"
homepage = "https://github.com/rust-gpu/spirv-tools-rs"
keywords = ["spir-v", "rust-gpu"]
categories = ["rendering::data-formats"]

[workspace.dependencies]
spirv-tools = { path = "spirv-tools", version = "0.13.0", default-features = false }
spirv-tools-sys = { path = "spirv-tools-sys", version = "0.13.0", default-features = false }
