[package]
name = "spirv-tools-sys"
description.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
# This is the same license for the underlying SPIRV-Tools code
license = "Apache-2.0"
readme = "README.md"
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

build = "build.rs"
links = "spirv-tools"
include = [
    "generated",
    "spirv-headers/include",
    "spirv-tools/include",
    "!spirv-tools/source/diff",
    "!spirv-tools/source/fuzz",
    "!spirv-tools/source/link",
    "!spirv-tools/source/lint",
    "!spirv-tools/source/reduce",
    "!spirv-tools/source/wasm",
    "spirv-tools/source",
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[features]
default = ["use-compiled-tools"]
# Using this feature disables the compilation in the build script, but
# preserves the types so that spirv-tools can still work without needing
# to keep copies of some of the basic enums etc
use-installed-tools = []
# Forces compilation of the C++ code, even if `use-installed-tools` is enabled
use-compiled-tools = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
